# shape-memory-fem

./: CMakeLists.txt  README.md  box.geo  consts.h  heat_solver.cpp  heat_solver.h  importmesh.cpp  importmesh.h  linelastity_solver.cpp  linelastity_solver.h  main.cpp  mesh.vtk  shapefun.cpp  shapefun.h  sma_solver.cpp  sma_solver.h  solver.cpp  solver.h  unitsquare.geo  vtkexport.cpp  vtkexport.h
